# orpheus-live

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
colab/: check_version.py  orpheus_tts_server.ipynb
server/: orpheus_server.py
src/orpheus_live/: __init__.py  __main__.py  config.py  console.py  debug.py
src/orpheus_live/audio/: __init__.py  capture.py  playback.py  vad.py
src/orpheus_live/core/: __init__.py  cognition.py  conversation.py  speculation.py
src/orpheus_live/engines/: __init__.py  base.py  factory.py  llm.py  sanitize.py  stt.py  tts.py  tts_cpp.py  tts_remote.py
src/orpheus_live/models/: __init__.py  cognition.py  conversation.py  voice.py
tests/: conftest.py  test_audio_sink.py  test_brain_memory.py  test_capture.py  test_debug_tracer.py  test_llm_prefix.py  test_mute_gate.py  test_overlap_verdict.py  test_pre_synth_stream.py  test_sanitize.py  test_silence_breaker_jitter.py  test_speculation_invalidate.py  test_speech_player.py  test_stt_filter.py  test_tts_backend.py  test_tts_seam.py  test_turn_decision.py  test_turn_predictor.py  test_voice_presets.py
